platform/networkpolicies/allow-intra-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  labels:
    app.kubernetes.io/managed-by: crossplane
    idp.platform.io/environment: shared
    idp.platform.io/team: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
