platform/networkpolicies/deny-cross-namespace-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-namespace-ingress
  labels:
    app.kubernetes.io/managed-by: crossplane
    idp.platform.io/environment: shared
    idp.platform.io/team: platform
spec:
  podSelector: {}
  policyTypes:
    - Ingress
